--- a/Django_work/templates/index.html
+++ b/Django_work/templates/index.html
@@ -13,8 +13,7 @@
     <textarea col="40" rows="10" name="article"></textarea>
     <input type="submit" value="Submit" name="submit">
 
-
-
 </form>
+<h2>Now You Are Connected to GitHub ...!!gi</h2>
 </body>
 </html>
