changes for readme_edits test2

--- a/Django_work/templates/index.html
+++ b/Django_work/templates/index.html
@@ -15,6 +15,6 @@
 
 </form>
 <h2>Now You Are Connected to GitHub ...!!gi</h2>
-<h2>This is second change for testing the readme_edits</h2>
+<h2>This is second change for testing the readme_edits try 2</h2>
 </body>
 </html>
