--- a/Django_work/templates/index.html
+++ b/Django_work/templates/index.html
@@ -14,7 +14,7 @@
     <input type="submit" value="Submit" name="submit">
 
 </form>
-<h2>Now You Are Connected to GitHub ...!!gi</h2>
+<h2>Now You Are Connected to GitHub ...!!git hub</h2>
 <h2>This is second change for testing the readme_edits try 2</h2>
 </body>
 </html>
